2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh, sanity.hh: Compilation fixes.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Update tests to use path_state_* and pass utf8
	objects.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (file_path_external): Take a utf8() object, always.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (class file_path): Make "convenience functions"
	required.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* Switch rest of instances to using convenience functions.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>
	
	* Switch many instances to using convenience functions.
	
2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (file_path_internal, file_path_external): Define
	convenience functions.
	(file_path, bookkeeping_path, system_path): Add default
	constructors.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* app_state.cc, change_set.cc, change_set.hh, commands.cc:
	* inodeprint.cc, manifest.cc, rcs_import.cc, restrictions.cc:
	* work.cc: Audit all calls to file_path() to add internal/external
	notation.

2005-08-24  Nathaniel Smith  <njs@pobox.com>

	* app_state.cc: More paths.hh conversion.
	(app_state::prefix): Remove.
	* commands.cc: Remove uses of app.prefix.
	* automate.cc (automate_attributes): Likewise.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (any_path::as_internal): On second thought, return a
	utf8 object.
	* app_state.cc (set_database): Take a system_path.
	(set_pidfile): Likewise.
	* monotone.cc (cpp_main): Pass one.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* file_io.hh (get_homedir): Return a system_path.
	* app_state.hh (app_state): Make pidfile a system_path.
	* sanity.hh (sanity::filename): Make a system_path.
	* monotone.cc (cpp_main): Adjust accordingly.
	* paths.hh (any_path): Add as_internal() to interface.
	* paths.cc: Add roundtripping tests.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* platform.hh, unix/fs.cc, win32/fs.cc