@@ -1,5 +1,10 @@
 2005-08-24  Nathaniel Smith  <njs@pobox.com>
 
+	* manifest.hh: Include paths.hh.
+	* file_io.hh: Fix syntax errors, and fixup interface.
+
+2005-08-24  Nathaniel Smith  <njs@pobox.com>
+
 	* paths.hh, sanity.hh: Compilation fixes.
 
 2005-08-24  Nathaniel Smith  <njs@pobox.com>
